# querido-diario-analise-dados-cookie-cutter

./: .gitignore  LICENCE.md  README.md  instalacao-local.sh  instalacao-local.txt  pyproject.toml
notebooks/: 01-extract-text-from-file.ipynb
samples/: README.md
