[tool.poetry]
name = "test-querido-diario-toolbox"
version = "0.1.0"
description = ""
authors = ["Ítalo Epifânio <italo.epifanio@mail.palaimon.io>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
querido-diario-toolbox = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
